# Socket-Telematics

./: README.md  intervals.txt  intervals.xml  main.py  pyproject.toml  socket_telematics.db
socket_telematics/: __init__.py  alerts.py  cli.py  client.py  exceptions.py  intervals.py  protocol.py  server.py  status.py  storage.py
