[project]
name = "socket-telematics"
version = "0.1.0"
description = "TCP telemetry server + simulated clients (with per-client interval files and SQLite persistence)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
socket-telematics = "socket_telematics.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
